i18n // jp: Optimize a prompt related to ADHD.

--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -2046,7 +2046,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "アプリのUI言語設定をmacOS/iOSで変更する場合、アプリを再起動する必要があります。これにより、新しい言語設定が有効になります。たとえユーザーがシステム設定から手動で変更した場合でも、アプリの再起動が必要である旨のメッセージが表示され、そしてそのメッセージを出すのは macOS /\niOS 側です。\n\nこのアプリ内の言語切り替え機能は、ユーザーの時間を数秒節約するために設けられています。このデザインはADHD（注意力欠陥障害）のユーザーに非常にフレンドリーです。ADHDの方々は、iOS/macOSのシステム設定の複雑なページを行き来している間に、やろうとしていたことを徹底的に忘れてしまうことがよくあります。\n\nこのメッセージを確認した時点で、アプリは終了します。"
+            "value" : "macOSやiOSにおいて、アプリの言語設定を変更した場合、新しい設定を有効にするにはアプリの再起動が必要です。\n\nこれは、ユーザーがOSのシステム設定から手動で変更した場合も同様で、その際には **OS側** から再起動を促すメッセージが表示されます。\n\nアプリ内に言語切り替え機能を設けたのは、数秒でもユーザーの時間を節約するためです。特にADHD（注意力欠陥障害）の特性を持つ方にとって、このデザインは非常に利便性が高いと考えています。複雑なOSのシステム設定画面を行き来する間に、本来の目的を忘れてしまうことが少なくないからです。\n\nこのメッセージを確認した時点で、アプリは終了します。\n"
           }
         },
         "ko" : {
