PZBaseKit // jp: [Cancel] 取り消す -> やめる.

--- a/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
+++ b/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
@@ -3124,7 +3124,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "取り消す"
+            "value" : "やめる"
           }
         },
         "ko" : {
